--- a/style.css
+++ b/style.css
@@ -35,3 +35,9 @@ form{
 }
 
 /* margin- top right bottom left */
+
+.g-recaptcha{
+    margin-top: 15px;
+    display: flex;
+    justify-content: center;
+}
